--- a/themes/fasto-child/style.css
+++ b/themes/fasto-child/style.css
@@ -5,7 +5,7 @@
  Author:       Ingo Steinke
  Author URI:   https://www.ingo-steinke.com/
  Template:     fasto
- Version:      1.3.2
+ Version:      1.3.3
  License:      GNU General Public License v2 or later (except for optional non-free web fonts)
  License URI:  http://www.gnu.org/licenses/gpl-2.0.html
  Tags:         Tags: 404, inclusive, footer, search, ux, usability, accessibility
@@ -115,8 +115,11 @@ a, .color-1, .widget .color-1, .widget a:hover, .sub-menu .current-menu-item > a
     color: #114791;
 }
 
-.category-link {
+.post-category .category-link {
 	background-color: #96511c;
+	height: 20px;
+	padding: 0 4px;
+	white-space: nowrap;
 }
 
 /* mobile more calm and compact */
