--- a/themes/fasto-child/style.css
+++ b/themes/fasto-child/style.css
@@ -5,7 +5,7 @@
  Author:       Ingo Steinke
  Author URI:   https://www.ingo-steinke.com/
  Template:     fasto
- Version:      1.3.4
+ Version:      1.5.0
  License:      GNU General Public License v2 or later (except for optional non-free web fonts)
  License URI:  http://www.gnu.org/licenses/gpl-2.0.html
  Tags:         Tags: 404, inclusive, footer, search, ux, usability, accessibility
@@ -99,8 +99,8 @@ footer .widget p a:visited {
     aspect-ratio: 16/9;
 }
 
-/* 2-column footer */
 @media (min-width: 1024px) {
+	/* 2-column footer */
     #footer-widgets .col-desktop-4:nth-child(2) {
         flex: 0 0 65%;
         max-width: 65% !important;
@@ -108,6 +108,15 @@ footer .widget p a:visited {
         #footer-widgets .col-desktop-4:nth-child(3) {
     	display:none;
     }
+
+	/* utility classes to control responsive image layout */
+	.lg-width-third {
+		max-width: 33%;
+	}
+
+	.lg-width-half {
+		max-width: 50%;
+	}
 }
 
 a, .color-1, .widget .color-1, .widget a:hover, .sub-menu .current-menu-item > a, .sub-menu a:hover, .menu > .menu-item > a:hover, .menu .page_item:hover > a, .menu > .menu-item:hover > a, .menu > .current-menu-item > a, .menu > .current-menu-ancestor > a, ul.tags a:hover, .comment-date, .fasto-fallback-menu .current_page_item a, .widget th a, .widget td a,
