--- a/themes/fasto-child/style.css
+++ b/themes/fasto-child/style.css
@@ -117,6 +117,15 @@ footer .widget p a:visited {
 	.lg-width-half {
 		max-width: 50%;
 	}
+	.alignright {
+		float: right;
+		margin-left: 2rem;
+	}
+
+	.alignleft {
+		float: left;
+		margin-right: 2rem;
+	}
 }
 
 a, .color-1, .widget .color-1, .widget a:hover, .sub-menu .current-menu-item > a, .sub-menu a:hover, .menu > .menu-item > a:hover, .menu .page_item:hover > a, .menu > .menu-item:hover > a, .menu > .current-menu-item > a, .menu > .current-menu-ancestor > a, ul.tags a:hover, .comment-date, .fasto-fallback-menu .current_page_item a, .widget th a, .widget td a,
