--- a/themes/fasto-child/style.css
+++ b/themes/fasto-child/style.css
@@ -5,7 +5,7 @@
  Author:       Ingo Steinke
  Author URI:   https://www.ingo-steinke.com/
  Template:     fasto
- Version:      1.8.1
+ Version:      1.9.0
  License:      GNU General Public License v2 or later (except for optional non-free web fonts)
  License URI:  http://www.gnu.org/licenses/gpl-2.0.html
  Tags:         Tags: 404, inclusive, footer, search, ux, usability, accessibility
@@ -58,7 +58,7 @@ body  {
 	line-height: 32px;
 }
 
-header#theme-header h1.site-title, h1,
+header#theme-header .site-title, h1,
 body h2, body h2.post-title, body h3, body h4, body h5, body h6 {
 	font-family: HealthyFreakRegular, Montserrat, Arial, sans-serif;
 	font-weight: normal;
@@ -66,7 +66,7 @@ body h2, body h2.post-title, body h3, body h4, body h5, body h6 {
 	text-transform: none;
 }
 
-header#theme-header h1.site-title, h1 {
+header#theme-header .site-title, h1 {
 	font-size: 42px;
 }
 
@@ -223,7 +223,7 @@ a, .color-1, .widget .color-1, .widget a:hover, .sub-menu .current-menu-item > a
 		text-align: center;
 		font-size: 1rem;
 	}
-	header#theme-header h1.site-title, h1 {
+	header#theme-header .site-title, h1 {
 		font-size: 34px;
 		line-height: 1.25;
 		margin: 0;
