add year to post teaser date

--- a/themes/fasto-child/style.css
+++ b/themes/fasto-child/style.css
@@ -305,3 +305,8 @@ ul.social-share {
 	display: none;
 }
 
+/* customize patched post teaser date */
+.date-published .date-year {
+	line-height: 1;
+	color: #000;
+}
