more accessible color fixes

--- a/themes/fasto-child/style.css
+++ b/themes/fasto-child/style.css
@@ -5,7 +5,7 @@
  Author:       Ingo Steinke
  Author URI:   https://www.ingo-steinke.com/
  Template:     fasto
- Version:      2.2.4
+ Version:      2.2.5
  License:      GNU General Public License v2 or later (except for optional non-free web fonts)
  License URI:  http://www.gnu.org/licenses/gpl-2.0.html
  Tags:         Tags: 404, inclusive, footer, search, ux, usability, accessibility
@@ -178,6 +178,12 @@ header#theme-header .site-title a, h1 a {
 /* fix color contrast accessibility */
 a:hover, .color-2, .widget .color-2 {
 	color: #577b2e !important;
+}
+
+.post-category .category-link:hover,
+.post-category .category-link:focus {
+	background-color: #577b2e !important;
+	color: #fff !important;
 }
 
 #search-form-holder { /* workaround cross-browser inconsistencies */
