fixup child theme localization

--- a/themes/fasto-child/style.css
+++ b/themes/fasto-child/style.css
@@ -12,6 +12,7 @@
  License URI:  http://www.gnu.org/licenses/gpl-2.0.html
  Tags:         Tags: 404, inclusive, footer, search, ux, usability, accessibility
  Text Domain:  fastochild
+ Domain Path:  /languages
 */
 
 /**
